# Trade-Matching-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.cpp  server.cpp
src/: CMakeLists.txt  README.md  client.cpp  orderbook.cpp  orderbook.hpp  server.cpp
src/DataBase/: CMakeLists.txt  DataBase.cpp
src/DataBase/SqlRequests/: CreateUsersTable.txt  RegisterUser.txt  RetrieveUserAccountBalance.txt  UpdateUserStocks.txt
src/DataBase/include/: DataBase.hpp  DataBaseCommunicationCodes.hpp
src/DataBase/tests/: CMakeLists.txt  tests.cpp
src/DataBaseCommunication/: CMakeLists.txt  DataBaseCommunication.cpp
src/DataBaseCommunication/include/: DBCommunicationModuleCodes.hpp  DataBaseCommunication.hpp
src/DataTransferModule/: CMakeLists.txt  ChunkTransmission.cpp  requestClass.cpp  requestHandler.cpp
src/DataTransferModule/include/: ChunkTransmission.h  RequestClassByteCodes.hpp  byteCodes.h  requestClass.h  requestHandler.hpp
src/DataTransferModule/tests/: CMakeLists.txt  CmakeLists.txt  tests.cpp
src/OrderBook/: CMakeLists.txt
src/OrderBook/core/: CMakeLists.txt  orderbook.cpp
src/OrderBook/include/: orderTypes.h  orderbook.h
src/OrderBook/tests/: CMakeLists.txt  test_limit_orders.cpp  test_main.cpp  test_market_orders.cpp
src/client/: CMakeLists.txt
src/client/RequestSender/: CMakeLists.txt  requestSender.cpp
src/client/RequestSender/include/: requestSender.hpp
src/refactored/: CMakeLists.txt
src/refactored/DataTransferModule/: CMakeLists.txt  requestClass.cpp
src/refactored/DataTransferModule/include/: ChunkTransmission.hpp  requestClass.hpp
src/refactored/DataTransferModule/tests/: CMakeLists.txt  tests.cpp
src/refactored/client/: CMakeLists.txt  client.cpp
src/refactored/client/RequestSender/: CMakeLists.txt  RequestSender.cpp  requestSender.cpp
src/refactored/client/RequestSender/include/: RequestSender.hpp  requestSender.hpp
src/refactored/server/: CMakeLists.txt  server.cpp
src/refactored/server/Orderbook/tests/: test_main.cpp  test_market_orders.cpp
src/refactored/server/RequestHandler/: CMakeLists.txt  requestHandler.cpp
src/refactored/server/RequestHandler/include/: requestHandler.hpp
src/refactored/server/ServerFunctionPack/: CMakeLists.txt  FunctionPack.cpp
src/refactored/server/ServerFunctionPack/DataBase/SqlRequests/: RegisterUser.txt
src/refactored/server/ServerFunctionPack/DataBase/tests/: tests.cpp
src/refactored/server/ServerFunctionPack/InterThreadCommunicationModule/: InterThreadCommunication.cpp
src/refactored/server/ServerFunctionPack/InterThreadCommunicationModule/include/: InterThreadCommunication.hpp
src/refactored/server/ServerFunctionPack/Orderbook/: CMakeLists.txt  orderbook.cpp
src/refactored/server/ServerFunctionPack/Orderbook/core/: CMakeLists.txt  orderbook.cpp
src/refactored/server/ServerFunctionPack/Orderbook/include/: orderTypes.hpp  orderbook.hpp  quicksort.hpp
src/refactored/server/ServerFunctionPack/Orderbook/tests/: CMakeLists.txt  test_limit_orders.cpp
src/refactored/server/ServerFunctionPack/RequestHandler/: CMakeLists.txt  requestHandler.cpp
src/server/ServerFunctionPack/: FunctionPack.cpp
src/server/ServerFunctionPack/DataBase/: DataBase.cpp
src/server/ServerFunctionPack/DataBase/SqlRequests/: CreateUsersTable.txt  RetrieveUserId.txt  RetrieveUserStocks.txt  RetrieveUsername.txt  UpdateUserAccountBalance.txt
src/server/ServerFunctionPack/DataBase/include/: DataBase.hpp
src/server/ServerFunctionPack/DataBase/tests/: CMakeLists.txt
src/server/ServerFunctionPack/InterThreadCommunicationModule/: CMakeLists.txt
src/server/ServerFunctionPack/Orderbook/: CMakeLists.txt
src/server/ServerFunctionPack/Orderbook/core/: orderbook.cpp
src/server/ServerFunctionPack/Orderbook/include/: orderbook.hpp  quicksort.hpp
src/server/ServerFunctionPack/Orderbook/tests/: CMakeLists.txt  test_limit_orders.cpp  test_main.cpp  test_market_orders.cpp
src/server/ServerFunctionPack/Orderbook/tests/testFunctions/: AdditionalTestFunctions.cpp  AdditionalTestFunctions.hpp
src/server/ServerFunctionPack/RequestHandler/: CMakeLists.txt  requestHandler.cpp
src/server/ServerFunctionPack/RequestHandler/include/: requestHandler.hpp
src/server/ServerFunctionPack/include/: ServerFunctionality.hpp
tests/: testorderbook.cpp  tests.cpp
